@@ -1,5 +1,10 @@
 2013-10-13  Julien Bect  <julien.bect@supelec.fr>
 
+	New example script: 1D Bayesian optimization.
+
+	* examples/02_design_of_experiments/stk_example_doe03.m: new
+	script
+
 	Display help text when running an example script.
 
 	* misc/text/stk_disp_examplewelcome.m: modified
